# BuecherSortierung

Doku_und_Ideen/: DatenbankDiagramm.drawio  Datenbankdiagram.drawio
bibprojekt/: index.js
bibprojekt/backend/: build.gradle.kts
bibprojekt/backend/src/main/controller/: TransferController.kt
bibprojekt/backend/src/main/kotlin/com/backend/: TransferController.kt
bibprojekt/backend/src/main/kotlin/com/example/demo/controller/: TransferController.kt
bibprojekt/backend/src/main/resources/: application.properties
bibprojekt/frontend/: .package-lock.json  package.json
bibprojekt/frontend/src/: index.js  index.js.map  index.ts
bibprojekt/frontend/typescript/: package-lock.json  package.json
my_scanner/: Cargo.toml  bibDB.db
my_scanner/src/: create_tables.rs  main.rs
typescript-projekt/: index.js.map  index.ts  package-lock.json
typescript-projekt/backend/: pom.xml
typescript-projekt/demo/: pom.xml
