[package]
name = "my_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
# kein schreibfehler, is der name von ner library
reqwest = { version = "0.13.1", features = ["blocking"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
